syntax = "proto3";

option go_package = "github.com/beijian01/xgame/pb";

package climsg;

import "def.proto";

message CReqLogin{
  string account = 1;
}
message SRespLogin{
  def.ErrCode code = 1;
  uint64 uid = 2;
}

